removed tests and updated main file

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "top-message-board",
   "version": "1.0.0",
   "description": "Set up a basic Express app by installing Express and EJS. Set up a basic index route and run your server. Create the required folders and files as discussed in the previous lessons.\r We are going to have 2 routes, the index (\"/\") and a “new message” form (\"/new\").\r Create an array at the top of your index router called messages and put a couple of sample messages inside of it like this:",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    
   },
   "repository": {
     "type": "git",
